exports[`test fails with no buttonText 1`] = `"received is not a function"`;

exports[`test fails with no props 1`] = `"received is not a function"`;

exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
    }
  }>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#8B5E3C",
          "borderColor": "#000000",
          "borderRadius": 10,
          "flex": -1,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 15,
          "padding": 15,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12,
            },
          ]
        }>
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders correctly with button size 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
    }
  }>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#8B5E3C",
          "borderColor": "#000000",
          "borderRadius": 10,
          "flex": -1,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 15,
          "padding": 15,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 18,
            },
          ]
        }>
        Test
      </Text>
    </View>
  </View>
</View>
`;
